common-applications/test-environment/datastat-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: datastat-test
  name: datastat-test
